# rbuilder

./: Cargo.toml  Dockerfile  config-gwyneth-reth.toml  config-gwyneth-standalone.toml  config-in-process-copy.toml  config-in-process.toml
crates/gwyneth-rbuilder/: Cargo.toml
crates/gwyneth-rbuilder/src/: main.rs
crates/rbuilder/: Cargo.toml
crates/rbuilder/src/: lib.rs
crates/rbuilder/src/backtest/: backtest_build_block.rs  backtest_build_range.rs  execute.rs  mod.rs
crates/rbuilder/src/backtest/fetch/: mod.rs
crates/rbuilder/src/backtest/redistribute/: mod.rs
crates/rbuilder/src/backtest/redistribute/cli/: mod.rs
crates/rbuilder/src/backtest/restore_landed_orders/: resim_landed_block.rs
crates/rbuilder/src/beacon_api_client/: mod.rs
crates/rbuilder/src/building/: conflict.rs  evm_inspector.rs  mod.rs  order_commit.rs  payout_tx.rs  sim.rs
crates/rbuilder/src/building/block_orders/: mod.rs  prioritized_order_store.rs  test_data_generator.rs
crates/rbuilder/src/building/builders/: block_building_helper.rs  mock_block_building_helper.rs  mod.rs  ordering_builder.rs
crates/rbuilder/src/building/builders/parallel_builder/: block_building_result_assembler.rs  conflict_resolvers.rs  conflict_resolving_pool.rs  groups.rs  mod.rs  simulation_cache.rs
crates/rbuilder/src/building/testing/: test_chain_state.rs
crates/rbuilder/src/building/testing/bundle_tests/: mod.rs  setup.rs
crates/rbuilder/src/building/testing/evm_inspector_tests/: mod.rs  setup.rs
crates/rbuilder/src/live_builder/: base_config.rs  cli.rs  config.rs  gwyneth.rs  layer2_info.rs  mod.rs
crates/rbuilder/src/live_builder/block_output/: relay_submit.rs
crates/rbuilder/src/live_builder/building/: mod.rs
crates/rbuilder/src/live_builder/order_input/: clean_orderpool.rs  mempool_fetcher.rs  mod.rs  order_replacement_manager.rs  order_sink.rs  orderpool.rs  replaceable_order_sink.rs  rpc_server.rs  txpool_fetcher.rs
crates/rbuilder/src/live_builder/payload_events/: mod.rs  payload_source.rs
crates/rbuilder/src/live_builder/simulation/: mod.rs  sim_worker.rs  simulation_job.rs
crates/rbuilder/src/mev_boost/: error.rs  fake_mev_boost_relay.rs  mod.rs  sign_payload.rs
crates/rbuilder/src/primitives/: mev_boost.rs  mod.rs  test_data_generator.rs
crates/rbuilder/src/proposing/: mod.rs
crates/rbuilder/src/roothash/: prefetcher.rs
crates/rbuilder/src/utils/: cross_chain_provider.rs  mod.rs  noncer.rs  provider_factory_reopen.rs  tx_signer.rs
crates/reth-rbuilder/: Cargo.toml
crates/reth-rbuilder/src/: main.rs
