[workspace]
members = [
    "crates/rbuilder",
    "crates/rbuilder/src/test_utils",
    "crates/rbuilder/src/telemetry/metrics_macros"
]
resolver = "2"

# Like release, but with full debug symbols. Useful for e.g. `perf`.
[profile.debug-fast]
inherits = "release"
debug = true

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
reth = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-db = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-db-common = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-libmdbx = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-trie = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-trie-parallel = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-basic-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6", features = ["test-utils"] }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.6" }

# version is copied from reth  "v1.0.6" dependencies
revm = { version = "14.0.0", features = [
    "std",
    "secp256k1",
    "optional_balance_check",
], default-features = false }
revm-inspectors = "0.6"
revm-primitives = { version = "9.0.0", features = [
    "std",
], default-features = false }

ethereum_ssz_derive = "0.7"
ethereum_ssz = "0.7"

alloy-primitives = { version = "0.8.0", default-features = false }
alloy-rlp = "0.3.4"
alloy-chains = "0.1.23"
alloy-provider = { version = "0.3.0", features = ["ipc", "pubsub"] }
alloy-pubsub = { version = "0.3.0" }
alloy-eips = { version = "0.3.0" }
alloy-rpc-types = { version = "0.3.0" }
alloy-json-rpc = { version = "0.3.0" }
alloy-transport-http = { version = "0.3.0" }
alloy-network = { version = "0.3.0" }
alloy-transport = { version = "0.3.0" }
alloy-node-bindings = { version = "0.3.0" }
alloy-consensus = { version = "0.3.0", features = ["kzg"] }
alloy-serde = { version = "0.3.0" }
alloy-rpc-types-beacon = { version = "0.3.0", features = [
    "ssz",
] }
alloy-rpc-types-engine = { version = "0.3.0", features = [
    "ssz",
] }
alloy-rpc-types-eth = { version = "0.3.0" }
alloy-signer-local = { version = "0.3.0" }
alloy-sol-types = { version = "0.8.2", default-features = false }

[patch.crates-io]
revm = { path = "../revm/crates/revm" }
revm-primitives = { path = "../revm/crates/primitives" }
revm-interpreter = { path = "../revm/crates/interpreter" }
revm-precompile = { path = "../revm/crates/precompile" }
revm-inspectors = { path = "../revm-inspectors" }

[patch."https://github.com/paradigmxyz/reth"]
reth = { path = "../reth/bin/reth" }
reth-db = {path = "../reth/crates/storage/db"}
reth-db-common = { path = "../reth/crates/storage/db-common" }
reth-errors = { path = "../reth/crates/errors" }
reth-libmdbx = { path = "../reth/crates/storage/libmdbx-rs" }
reth-payload-builder = { path = "../reth/crates/payload/builder" }
reth-node-api = { path = "../reth/crates/node/api" }
reth-trie = { path = "../reth/crates/trie/trie" }
reth-trie-parallel = { path = "../reth/crates/trie/parallel" }
reth-basic-payload-builder = { path = "../reth/crates/payload/basic" }
reth-node-core = { path = "../reth/crates/node/core" }
reth-primitives = { path = "../reth/crates/primitives" }
reth-provider = { path = "../reth/crates/storage/provider" }
reth-chainspec = { path = "../reth/crates/chainspec" }
reth-evm = { path = "../reth/crates/evm" }
reth-evm-ethereum = { path = "../reth/crates/ethereum/evm" }
reth-db-api = { path = "../reth/crates/storage/db-api" }
reth-execution-errors = { path = "../reth/crates/evm/execution-errors" }
reth-trie-db = { path = "../reth/crates/trie/db" }
