[package]
name = "reth-rbuilder"
version.workspace = true
edition.workspace = true

[dependencies]
rbuilder = { path = "../rbuilder" }
gwyneth = { path = "../../../reth/crates/gwyneth" }

reth.workspace = true
reth-node-builder.workspace = true
reth-node-ethereum.workspace = true
reth-provider.workspace = true
reth-cli-util.workspace = true
reth-cli-commands.workspace = true
reth-db-api.workspace = true
reth-db.workspace = true
reth-db-common.workspace = true

tokio.workspace = true
clap.workspace = true
eyre.workspace = true
tracing.workspace = true
serde_json = "1.0.105"

[target.'cfg(unix)'.dependencies]
tikv-jemallocator = { workspace = true, optional = true }
libc.workspace = true

[features]
jemalloc = []
